# tank-schema

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml  vehicles.sh
.github/workflows/: deploy-docs.yaml  main.yaml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PersonStatus/: index.html
String/: index.html
Tank/: index.html
TankCollection/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
Vehicle/: index.html
about/: index.html
age_in_years/: index.html
birth_date/: index.html
chains/: index.html
data_harmonizer/: menu.json
description/: index.html
entries/: index.html
examples/: README.md  TankCollection-minimal-plus.yaml
examples/output/: README.md  TankCollection-2-wheels-and-chains.json  TankCollection-2-wheels-and-chains.ttl  TankCollection-2-wheels-and-chains.yaml
id/: index.html
name/: index.html
primary_email/: index.html
project/excel/: tank_schema.xlsx
project/graphql/: tank_schema.graphql
project/json/: tank_schema.json
project/jsonld/: tank_schema.context.jsonld  (+1 more)
search/: search_index.json
tank-schema/: index.html
tanks/: index.html
tests/: __init__.py  test_valid_collections.py
vital_status/: index.html
wheels/: index.html
(+18 files in other folders)
