[tool.poetry]
name = "tank_schema"
version = "0.1.0"
description = "a vehicle and tank schema"
authors = ["Mark Andrew Miller <mam@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/tank_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.group.dev.dependencies]
linkml = "^1.5.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
check-jsonschema = "^0.22.0"
gen-pop-linkml2sheets = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
dh-json2linkml = 'src.tank_schema.datamodel.dh_json2linkml:update_json'
linkml-json2dh = 'src.tank_schema.datamodel.linkml_json2dh:extract_lists'
